version/0.16/_sources/api/solver/_autosummary/settings/phase_1.rst.txt
:orphan:

.. _phase_1:

phase
=====

.. autoclass:: ansys.fluent.core.solver.settings_232.phase_1.phase
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`phase_child <phase_child_1>`


.. rubric:: Included in:

==================================   =================================

Parent                                                         Summary

==================================   =================================
:ref:`solid_child <solid_child_1>`       'child_object_type' of solid.

==================================   =================================

